addressing spacing and grouping issues for ul in dd

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -95,6 +95,16 @@ dt {
     font-weight:700;
 }
 
+dd > ul {
+    margin: unset;
+}
+dd {
+    margin-bottom: 0.3rem;
+}
+
+dl {
+    margin-bottom: var(--ifm-leading);
+}
 
 /* navbar */
 
